Event-only segment types + PLE template assignments (ATW-0331) (#540)
* feat: flag event-only segment types, excluded from AI show proposals (ATW-0331)

Phase 1 of ATW-0331: Abu Dhabi Rumble is a once-in-a-blue-moon PLE event
format but could be proposed by the AI as an ordinary segment.

- segment_type.event_only BOOLEAN NOT NULL DEFAULT FALSE (H2 V147 /
  MySQL V116; released scripts untouched)
- SegmentType.eventOnly field; seed JSON marks Abu Dhabi Rumble only;
  SegmentTypeSync passes it through; createOrUpdateSegmentType gains a
  6-arg overload (null = leave existing / default false on create)
- ShowPlanningPromptBuilder filters event-only types from the AI prompt's
  "Available Segment Types" — unconditional per design decision
- Manual selection is deliberately untouched: Booker/Admin can still pick
  event-only types in the proposal edit dialog, ShowDetailView Add
  Segment, and feud script editors
- SegmentTypeListView edit dialog gains an Event-only checkbox and now
  round-trips the flag through the 6-arg service call (was silently
  dropped; caught by the new tests)
- Tests: eventOnly create/update/null semantics, prompt exclusion,
  seed-JSON sync pass-through, checkbox round-trip

Full suite verified green in the touched classes (79 tests) plus targeted
recheck of stale-bytecode false failures; tournament follow-up filed as
ATW-oahn.

Co-Authored-By: Claude Code <noreply@anthropic.com>

* style: auto-fix Spotless/OpenRewrite formatting

* feat: PLE template assignments for segment types/rules with per-row mode (ATW-0331)

Phase 2 of ATW-0331: show templates can assign segment types and rules,
each row carrying its own mode, so one template mixes encouraged and
auto-attached assignments freely.

- show_template_segment_assignment join table (H2 V148 / MySQL V117):
  optional segmentType + optional segmentRule (exactly one required,
  enforced by isValid) + AssignmentMode ENCOURAGED | AUTO_ATTACH
- ShowTemplate.segmentAssignments @OneToMany(cascade=ALL