@@ -18,6 +18,7 @@ package com.github.javydreamercsw.management.ui.view.show.template;
 
 import static com.github.mvysny.kaributesting.v10.LocatorJ._get;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.when;
 
 import com.github.javydreamercsw.base.ai.image.ImageGenerationServiceFactory;
@@ -26,6 +27,13 @@ import com.github.javydreamercsw.base.ai.service.AiSettingsService;
 import com.github.javydreamercsw.base.security.SecurityUtils;
 import com.github.javydreamercsw.base.ui.component.ViewToolbar;
 import com.github.javydreamercsw.management.domain.commentator.CommentaryTeamRepository;
+import com.github.javydreamercsw.management.domain.show.segment.rule.SegmentRule;
+import com.github.javydreamercsw.management.domain.show.segment.type.SegmentType;
+import com.github.javydreamercsw.management.domain.show.template.ShowTemplate;
+import com.github.javydreamercsw.management.domain.show.template.ShowTemplateSegmentAssignment;
+import com.github.javydreamercsw.management.domain.show.type.ShowType;
+import com.github.javydreamercsw.management.service.segment.SegmentRuleService;
+import com.github.javydreamercsw.management.service.segment.type.SegmentTypeService;
 import com.github.javydreamercsw.management.service.show.template.ShowTemplateService;
 import com.github.javydreamercsw.management.service.show.type.ShowTypeService;
 import com.github.javydreamercsw.management.ui.view.AbstractViewTest;
@@ -33,11 +41,15 @@ import com.vaadin.flow.component.UI;
 import com.vaadin.flow.component.grid.Grid;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 
 class ShowTemplateListViewTest extends AbstractViewTest {
 
@@ -48,14 +60,20 @@ class ShowTemplateListViewTest extends AbstractViewTest {
   @Mock private ImageGenerationServiceFactory imageGenerationServiceFactory;
   @Mock private ImageStorageService imageStorageService;
   @Mock private AiSettingsService aiSettingsService;
+  @Mock private SegmentTypeService segmentTypeService;
+  @Mock private SegmentRuleService segmentRuleService;
 
   private ShowTemplateListView view;
 
   @BeforeEach
   void setup() {
-    when(showTypeService.findAll()).thenReturn(Collections.emptyList());
-    when(showTemplateService.findAll()).thenReturn(Collections.emptyList());
-    when(commentaryTeamRepository.findAll()).thenReturn(Collections.emptyList());
+    lenient().when(showTypeService.findAll()).thenReturn(List.of(showType("PLE")));
+    lenient().when(showTemplateService.findAll()).thenReturn(Collections.emptyList());
+    lenient().when(commentaryTeamRepository.findAll()).thenReturn(Collections.emptyList());
+    lenient().when(segmentTypeService.findAllForAdmin()).thenReturn(Collections.emptyList());
+    lenient().when(segmentRuleService.findAll()).thenReturn(Collections.emptyList());
+    lenient().when(securityUtils.canCreate()).thenReturn(true);
+    lenient().when(securityUtils.canEdit()).thenReturn(true);
 
     view =
         new ShowTemplateListView(
@@ -65,8 +83,16 @@ class ShowTemplateListViewTest extends AbstractViewTest {
             securityUtils,
             imageGenerationServiceFactory,
             imageStorageService,
-            aiSettingsService);
+            aiSettingsService,
+            segmentTypeService,
+            segmentRuleService);
     UI.getCurrent().add(view);
+  }
+
+  private static ShowType showType(String name) {
+    ShowType t = new ShowType();
+    t.setName(name);
+    return t;
   }
 
   @Test
@@ -91,5 +117,68 @@ class ShowTemplateListViewTest extends AbstractViewTest {
     assertTrue(headers.contains("Duration"));
     assertTrue(headers.contains("Matches"));
     assertTrue(headers.contains("Promos"));
+  }
+
+  @Test
+  @DisplayName("Edit dialog loads template assignments into the grid (ATW-0331)")
+  void editDialog_loadsAssignments() {
+    ShowTemplate template = new ShowTemplate();
+    template.setId(1L);
+    template.setName("Big PLE");
+    template.setShowType(showType("PLE"));
+    SegmentType rumble = new SegmentType();
+    rumble.setId(1L);
+    rumble.setName("Abu Dhabi Rumble");
+    rumble.setEventOnly(true);
+    SegmentRule rumbleRules = new SegmentRule();
+    rumbleRules.setId(2L);
+    rumbleRules.setName("Rumble Rules");
+    ShowTemplateSegmentAssignment assignment = new ShowTemplateSegmentAssignment();
+    assignment.setTemplate(template);
+    assignment.setSegmentType(rumble);
+    assignment.setSegmentRule(rumbleRules);
+    assignment.setMode(ShowTemplateSegmentAssignment.AssignmentMode.AUTO_ATTACH);
+    template.getSegmentAssignments().add(assignment);
+    when(showTemplateService.getTemplateWithAssignments(1L)).thenReturn(Optional.of(template));
+
+    view.openEditDialogForTest(template);
+
+    Grid<?> assignments = view.getAssignmentGridForTest();
+    assertEquals(1, assignments.getListDataView().getItemCount(), "Assignment row must load");
+  }
+
+  @Test
+  @DisplayName("Saving syncs dialog assignment rows onto the template (ATW-0331)")
+  void saveTemplate_syncsAssignments() {
+    ShowTemplate template = new ShowTemplate();
+    template.setId(3L);
+    template.setName("Big PLE");
+    template.setShowType(showType("PLE"));
+    when(showTemplateService.getTemplateWithAssignments(3L)).thenReturn(Optional.of(template));
+
+    view.openEditDialogForTest(template);
+    view.addAssignmentForTest(
+        null, rule("Rumble Rules"), ShowTemplateSegmentAssignment.AssignmentMode.AUTO_ATTACH);
+    view.saveTemplateForTest();
+
+    Mockito.verify(showTemplateService)
+        .syncSegmentAssignments(
+            ArgumentMatchers.eq(3L),
+            ArgumentMatchers.argThat(
+                rows ->
+                    rows.size() == 1
+                        && "Rumble Rules".equals(rows.get(0).getSegmentRule().getName())
+                        && rows.get(0).getMode()
+                            == ShowTemplateSegmentAssignment.AssignmentMode.AUTO_ATTACH));
+  }
+
+  private static SegmentRule rule(String name) {
+    SegmentRule r = new SegmentRule();
+    r.setName(name);
+    return r;
+  }
+
+  private static void assertEquals(int expected, int actual, String message) {
+    Assertions.assertEquals(expected, actual, message);
   }
 }
